--- a/projet2.html
+++ b/projet2.html
@@ -93,9 +93,9 @@ h1, h2, h3, h4, h5, h6 {
       
       <p style="color: white; margin-top: 30%;">La table liaison indique plusieurs champs tel que : <strong > <br>
 
-          <br> - La durée de la traversée <br>- Le port de départ <br>- Le port d'arrivé<br>- L'ID du secteur affecté</p>
+          <br> - La durée de la traversée <br>- L'ID du port de départ <br>- L'ID du port d'arrivé<br>- L'ID du secteur affecté <br> - L'ID de la liaison</p>
         </strong>
-        <p style="margin-top: 20%;">Le nom des port d'arrive et des seteurs est récuperer dans leur tables respectives</p>
+        <p style="margin-top: 20%;">Le nom des ports d'arrivées et des secteurs est récuperé dans leurs tables respectives</p>
     </div>
     
     <div class="w3-col l6 w3-padding-large">
@@ -111,6 +111,27 @@ h1, h2, h3, h4, h5, h6 {
 
   <hr>
 
+
+  <div class="w3-row w3-padding-64" id="about">
+    <div class="w3-col m6 w3-padding-large w3-hide-small"><center>
+
+      <h1 class="w3-xxlarge" style="color: white">Conclusion</h1>
+    </center>
+      <img src="assets/img/portfolio/csh.png" class="w3-round w3-image w3-opacity-min" alt="Table Setting" width="2000"  style="margin-top: 10%; height: 350px;">
+    </div>
+
+    <div class="w3-col m6 w3-padding-large">
+      <h1 class="w3-center" style="color: white"></h1><br>
+      <p class="w3-large" style="margin-top: 15%;"> 
+        <strong>
+        Nous pouvons voir que la listbox des secteurs contient plusieurs liaisons. <br>Chaques liaisons  à un port de départ et un port d'arrivée et la durée de la liaison que nous pouvons ajouter. </p>
+      </strong>
+      <p class="w3-large"> 
+        <strong>
+         De plus, l'application Sicilylines peut effectuer si neccéssaire la modification de la durée ainsi que la suppréssion d'une ou de plusieurs liaisons supprimant la ligne directement dans la base de donnée. </p>
+      </strong>
+    </div>
+  </div>
  
 </div>
 
