--- a/projet3.html
+++ b/projet3.html
@@ -61,14 +61,14 @@ h1, h2, h3, h4, h5, h6 {
 
     <div class="w3-col m6 w3-padding-large">
       <h1 class="w3-center" style="color: white">Présentation</h1><br>
-      <h5 class="w3-center">realisé en cours de l'année 2022.</h5>
+      <h5 class="w3-center">realisé en cours de l'année 2023.</h5>
       <p class="w3-large" style="margin-top: 15%;"> 
         <strong>
-        L'application de reservation de trajets Sicilylines a été réalisé avec l'utilisation d'une machine virtuel. <br> Le projet a été réalisé avec le framework Symfony</p>
+        L'application de réservation de trajets Sicilylines a été réalisé avec l'utilisation d'une machine virtuel. <br> Le projet a été réalisé avec le framework Symfony</p>
       </strong>
       <p class="w3-large"> 
         <strong>
-        Afin de de creer le site, nous avons dû creer une base de données avec les différentes entité qui la compose.</p> <br>
+        Afin de de créer le site, nous avons dû creer une base de données avec les différentes entité qui la compose.</p> <br>
         <p>Le projet est la mise en place d'un site de réservation. Une personne peut se connecter ou s'inscrire afin de réserver une traversée. Des formulaires ont été creer afin de permettre d'ajouter, de modifier et de supprimer diverses informations directement dans la base de données </p>
       </strong>
     </div>
