--- a/index.html
+++ b/index.html
@@ -260,9 +260,9 @@
     
         <div class="section-title">
           <h2>CV</h2>
-          <p>Vérifier mon CV</p>
+          <p>Vérifiez mon CV</p>
           <center>
-           <a href="assets/img/portfolio/CV V2 2024 Noah GADJADHAR.pdf" target="_blank" class="bouton-github">Exporter mon CV en fichier PDF</a>
+           <a href="assets/img/portfolio/CV V2 2024 Noah GADJADHAR.pdf" target="_blank" class="bouton-github">Exportez mon CV en fichier PDF</a>
          </center>
         </div>
         
