--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
 
         <div class="col-md-6 d-flex align-items-stretch">
           <div class="info-box">
-              <a href="08,17z/data=!3m1!4b1!4m6!3m5!1s0x47e66dbd35e72c15:0xe235d86b48ea5b9a!8m2!3d48.8765626!4d2.4020208!16s%2Fg%2F11b8v6shxy">
+              <a href="https://www.google.com/maps/place/Corner+Team+Boxing+%26+Fitness+Club/@39.3169694,-76.5999199,18.25z/data=!4m20!1m13!4m12!1m4!2m2!1d2.3565218!2d48.866051!4e1!1m6!1m2!1s0x89c80508a01c5f2b:0xafe2af4f51c0cd9e!2sCorner+Team+Boxing+%26+Fitness+Club,+1101+E+25th+St,+Baltimore,+MD+21218,+%C3%89tats-Unis!2m2!1d-76.5990027!2d39.3173414!3m5!1s0x89c80508a01c5f2b:0xafe2af4f51c0cd9e!8m2!3d39.3173381!4d-76.5990052!16s%2Fg%2F11f87_27bd?entry=ttu">
               <i class="bx bx-map"></i>
             </a>
               <h3>Oû me trouver</h3>
