--- a/projet1.html
+++ b/projet1.html
@@ -82,7 +82,7 @@ h1, h2, h3, h4, h5, h6 {
       <h4>l'ajout de produit dans le panier</h4>
  <br>
     
-      <h4>La suppression de de produits</h4>
+      <h4>La suppression de produits</h4>
   <br>
     
       <h4>La recherche d'éléments</h4>
