--- a/projet3.html
+++ b/projet3.html
@@ -99,7 +99,7 @@ h1, h2, h3, h4, h5, h6 {
       
       <p style="color: white; margin-top: 30%;">Le crud permet de : <strong > <br>
 
-          <br> - Creer des formulaires automatiquement <br> <br> - Modifier les information des formulaires<br> <br> - Supprimer des valeurs dans la base de données<br></p>
+          <br> - Créer des formulaires automatiquement <br> <br> - Modifier les information des formulaires<br> <br> - Supprimer des valeurs dans la base de données<br></p>
         </strong>
         
     </div>
