--- a/index.html
+++ b/index.html
@@ -603,10 +603,10 @@
   <div style="margin-top: 5%;">
 
     <p>Si vous trouvez une incohérence dans les documents, je vous invite à me contacter par l’un des moyens cité juste avant.
-      Ou si vous avez un soucis en suivant l’une des procédure n’hésitez pas à me contacter.</p>
+      Ou si vous avez un soucis en suivant l’une des procédures n’hésitez pas à me contacter.</p>
       <p>Si vous ne souhaitez pas me contacter, vous pouvez me contacter directement depuis mes réseaux sociaux  ou mon mail qui sont présents ci-dessus.
         Une réponse vous seras fournis dans un délai de 24 heures maximum.</p>
-  </div>    
+  </div>  
       <!-- <form action="contact.php" method="post" role="form" class="php-email-form mt-4">
         <div class="row">
           <div class="col-md-6 form-group">
