--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
         
         <div class="col-lg-3">
           <span class="skill">Angular</span><br>
-          <span class="skill">Github</span>
+          <span class="skill">Laravel</span>
         
       </div>
 
