--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
         </div>
         <div class="col-lg-3 col-md-3">
           <div class="icon-box">
-            <h3>Art martial</h3>
+            <h3>Voyage</h3>
           </div>
         </div>
       </div>
